# RustampVis

./: .gitignore  Cargo.toml  readme.md  rustampvis.ini
src/: comctl.rs  main.rs  viscolors.rs
