[package]
name = "RustampVis"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["ttf", "image"] }
cpal = { version = "*"}
anyhow = "1.0.72"
crossbeam-channel = "0.5.8"
clap = { version = "4.3.19", features = ["derive"] }
microfft = "0.5.1"
num = "0.4.1"
image = "0.24.7"
